--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,289 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.btn {
+  position: relative;
+  width: 200px;
+  height: 60px;
+  border-top: 0.5px solid rgba(255, 255, 255, 0.35);
+  border-left: 0.5px solid rgba(255, 255, 255, 0.35);
+  border-radius: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  latter-spacing: 2px;
+  padding-left: 40px;
+  transition: 0.5s;
+  overflow: hidden;
+}
+.btn:hover {
+  padding-left: 0px;
+  padding-right: 40px;
+  color: rgba(255, 255, 255, 1);
+}
+.btn span {
+  position: absolute;
+  z-index: 2;
+  width: 50px;
+  height: 50px;
+  left: 5px;
+  border-radius: 50%;
+  transition: 0.5s ease-in-out;
+}
+.btn:hover span {
+  left: calc(100% - 55px);
+}
+.btn:after {
+  content: '';
+  position: absolute;
+  width: 80px;
+  height: 100px;
+  z-index: 1;
+  background: rgba(000, 000, 000, 0.7);
+  transform: translateX(-170px) skewX(30deg);
+  transition: 0.55s ease-in-out;
+}
+.btn:hover:after {
+  transform: translateX(170px) skewX(30deg);
+}
+
+@keyframes animate {
+  0% {
+    transform: translateY(0) rotate(0deg);
+    opacity: 1;
+    border-radius: 0;
+  }
+  100% {
+    transform: translateY(-1000px) rotate(720deg);
+    opacity: 0;
+    border-radius: 50%;
+  }
+}
+
+.background {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  margin: 0;
+  padding: 0;
+  background: #1f202e;
+  overflow: hidden;
+}
+.background li {
+  position: absolute;
+  display: block;
+  list-style: none;
+  width: 20px;
+  height: 20px;
+  background: rgba(255, 255, 255, 0.2);
+  animation: animate 28s linear infinite;
+}
+
+.background li:nth-child(0) {
+  left: 40%;
+  width: 170px;
+  height: 170px;
+  bottom: -170px;
+  animation-delay: 1s;
+}
+.background li:nth-child(1) {
+  left: 13%;
+  width: 177px;
+  height: 177px;
+  bottom: -177px;
+  animation-delay: 2s;
+}
+.background li:nth-child(2) {
+  left: 14%;
+  width: 116px;
+  height: 116px;
+  bottom: -116px;
+  animation-delay: 4s;
+}
+.background li:nth-child(3) {
+  left: 63%;
+  width: 165px;
+  height: 165px;
+  bottom: -165px;
+  animation-delay: 1s;
+}
+.background li:nth-child(4) {
+  left: 39%;
+  width: 111px;
+  height: 111px;
+  bottom: -111px;
+  animation-delay: 18s;
+}
+.background li:nth-child(5) {
+  left: 64%;
+  width: 108px;
+  height: 108px;
+  bottom: -108px;
+  animation-delay: 25s;
+}
+.background li:nth-child(6) {
+  left: 63%;
+  width: 115px;
+  height: 115px;
+  bottom: -115px;
+  animation-delay: 19s;
+}
+.background li:nth-child(7) {
+  left: 54%;
+  width: 101px;
+  height: 101px;
+  bottom: -101px;
+  animation-delay: 19s;
+}
+.background li:nth-child(8) {
+  left: 75%;
+  width: 160px;
+  height: 160px;
+  bottom: -160px;
+  animation-delay: 35s;
+}
+.background li:nth-child(9) {
+  left: 58%;
+  width: 146px;
+  height: 146px;
+  bottom: -146px;
+  animation-delay: 32s;
+}
+.background li:nth-child(10) {
+  left: 68%;
+  width: 106px;
+  height: 106px;
+  bottom: -106px;
+  animation-delay: 23s;
+}
+.background li:nth-child(11) {
+  left: 84%;
+  width: 152px;
+  height: 152px;
+  bottom: -152px;
+  animation-delay: 4s;
+}
+.background li:nth-child(12) {
+  left: 42%;
+  width: 133px;
+  height: 133px;
+  bottom: -133px;
+  animation-delay: 6s;
+}
+.background li:nth-child(13) {
+  left: 0%;
+  width: 101px;
+  height: 101px;
+  bottom: -101px;
+  animation-delay: 28s;
+}
+.background li:nth-child(14) {
+  left: 11%;
+  width: 131px;
+  height: 131px;
+  bottom: -131px;
+  animation-delay: 8s;
+}
+.background li:nth-child(15) {
+  left: 88%;
+  width: 157px;
+  height: 157px;
+  bottom: -157px;
+  animation-delay: 62s;
+}
+.background li:nth-child(16) {
+  left: 68%;
+  width: 140px;
+  height: 140px;
+  bottom: -140px;
+  animation-delay: 22s;
+}
+.background li:nth-child(17) {
+  left: 62%;
+  width: 123px;
+  height: 123px;
+  bottom: -123px;
+  animation-delay: 14s;
+}
+.background li:nth-child(18) {
+  left: 1%;
+  width: 159px;
+  height: 159px;
+  bottom: -159px;
+  animation-delay: 35s;
+}
+.background li:nth-child(19) {
+  left: 69%;
+  width: 165px;
+  height: 165px;
+  bottom: -165px;
+  animation-delay: 27s;
+}
+.background li:nth-child(20) {
+  left: 58%;
+  width: 103px;
+  height: 103px;
+  bottom: -103px;
+  animation-delay: 19s;
+}
+.background li:nth-child(21) {
+  left: 12%;
+  width: 117px;
+  height: 117px;
+  bottom: -117px;
+  animation-delay: 54s;
+}
+.background li:nth-child(22) {
+  left: 19%;
+  width: 149px;
+  height: 149px;
+  bottom: -149px;
+  animation-delay: 80s;
+}
+.background li:nth-child(23) {
+  left: 5%;
+  width: 142px;
+  height: 142px;
+  bottom: -142px;
+  animation-delay: 91s;
+}
+.background li:nth-child(24) {
+  left: 13%;
+  width: 101px;
+  height: 101px;
+  bottom: -101px;
+  animation-delay: 66s;
+}
+.background li:nth-child(25) {
+  left: 17%;
+  width: 113px;
+  height: 113px;
+  bottom: -113px;
+  animation-delay: 89s;
+}
+.background li:nth-child(26) {
+  left: 57%;
+  width: 165px;
+  height: 165px;
+  bottom: -165px;
+  animation-delay: 9s;
+}
+.background li:nth-child(27) {
+  left: 2%;
+  width: 110px;
+  height: 110px;
+  bottom: -110px;
+  animation-delay: 38s;
+}
+.background li:nth-child(28) {
+  left: 89%;
+  width: 161px;
+  height: 161px;
+  bottom: -161px;
+  animation-delay: 85s;
+}
