--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=PT+Serif&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+html {
+  scroll-behaviour: smooth;
+}
 
 .btn {
   position: relative;
@@ -9,7 +12,6 @@
   height: 60px;
   border-top: 0.5px solid rgba(255, 255, 255, 0.35);
   border-left: 0.5px solid rgba(255, 255, 255, 0.35);
-  border-radius: 60px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -43,14 +45,14 @@
   height: 100px;
   z-index: 1;
   background: rgba(000, 000, 000, 0.7);
-  transform: translateX(-170px) skewX(30deg);
+  transform: translateX(-174px) skewX(30deg);
   transition: 0.55s ease-in-out;
 }
 .btn:hover:after {
   transform: translateX(170px) skewX(30deg);
 }
 
-@keyframes animate {
+/* @keyframes animate {
   0% {
     transform: translateY(0) rotate(0deg);
     opacity: 1;
@@ -61,9 +63,9 @@
     opacity: 0;
     border-radius: 50%;
   }
-}
+} */
 
-.background {
+/* .background {
   position: fixed;
   width: 100vw;
   height: 100vh;
@@ -286,4 +288,4 @@
   height: 161px;
   bottom: -161px;
   animation-delay: 85s;
-}
+} */
